--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <!-- 
     <p><a href="index.html">Go back</a></p>
  -->
+    <div id="ccc">
+        <div id="controls">
+            <input type="number" min="1" max="100" step="1" />
+            <button type="button" data-create>Create</button>
+            <button type="button" data-destroy>Destroy</button>
+        </div>
 
-    <div id="controls">
-        <input type="number" min="1" max="100" step="1" />
-        <button type="button" data-create>Create</button>
-        <button type="button" data-destroy>Destroy</button>
+        <div id="boxes"></div>
     </div>
-
-    <div id="boxes"></div>
 
     <script src="js/aaa.js" type="module"></script>
     <!--
