--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
+
     <script src="js/ccc.js" type="module"></script>
+    <input type="button" value="Reload Page" onClick="window.location.reload(true)">
+    <input type="button" onclick="window.location.reload(true)">Refresh Me>
 </body>
 
 </html>
