--- a/index3.html
+++ b/index3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-
-    <script src="js/ccc.js" type="module"></script>
     <input type="button" value="Reload Page" onClick="window.location.reload(true)">
-    <input type="button" onclick="window.location.reload(true)">Refresh Me>
+    <script src="js/ccc.js" type="module"></script>
 </body>
 
 </html>
